--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav a {
+  margin: 0 auto;
+  text-align: center;
+  background-color: cadetblue;
+  padding: 10px;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+
+section#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section#details div {
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: cadetblue;
+}
